force-app/main/default/objects/msf_Endorsement__c/msf_Endorsement__c.object-meta.xml
<CustomObject>
    <label>Aval</label>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>Código aval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>