force-app/main/default/objects/msf_Endorsement__c/fields/msf_endorsementDate__c.field-meta.xml
<CustomField>
    <fullName>msf_endorsementDate__c</fullName>
    <label>Fecha de avalamiento</label>
    <type>Date</type>
</CustomField>