force-app/main/default/objects/msf_Endorsement__c/fields/msf_IsEndorsed__c.field-meta.xml
<CustomField>
    <fullName>msf_IsEndorsed__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Avalado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avalado por</relationshipLabel>
    <relationshipName>AvaladoPor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>