force-app/main/default/objects/msf_Endorsement__c/fields/msf_isEndorsing__c.field-meta.xml
<CustomField>
    <fullName>msf_isEndorsing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aval</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Aval de</relationshipLabel>
    <relationshipName>Avales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>